Tercer commit - Práctica 1.1 acabada

--- a/maqueta.html
+++ b/maqueta.html
@@ -19,47 +19,47 @@
         <a href="">Boton 4</a>
         <a href="">Boton 5</a>
     </menu>
-    <div>
-        <nav>
-
-        </nav>
-        <div>
-            <nav>
-                <a href="">Boton 1</a>
-                <a href="">Boton 2</a>
-                <a href="">Boton 3</a>
-                <a href="">Boton 4</a>
-                <a href="">Boton 5</a>
-            </nav>
-            <main>
-                <h2>¿Cómo se adapta esta web?</h2>
-                <p>
-                    Crear una maqueta de una web que modifique su composición 
-                    dependiendo del dispositivo con el que se visualice. 
-                    Utilizar para ello un diseño responsive con media queries, 
-                    no se puede utilizar Flexbox o CSS Grid.  La maqueta se 
-                    guardará en dos archivos llamados maqueta.html y maqueta.css.
-                </p>
-                <h3>Pantalla de ordenador (a partir de 1200px)</h3>
-                <p>
-                    El tipo de letra para el tamaño de pantalla de ordenador será Arial.
-                </p>
-                <h3>Pantalla de tablet (a partir de 700px y hasta 1200px)</h3>
-                <p>
-                    El tipo de letra para el tamaño de pantalla de tablet será Calibri.
-                </p>
-                <h3>Pantalla de móvil (hasta 700px)</h3>
-                <p>
-                    El tipo de letra para el tamaño de pantalla de móvil será Times New Roman.
-                </p>
-            </main>
-            <aside>
-
-            </aside>
-        </div>
-    </div>
+    <nav class="nav1">
+        <a href="">Boton 1</a>
+        <a href="">Boton 2</a>
+        <a href="">Boton 3</a>
+        <a href="">Boton 4</a>
+        <a href="">Boton 5</a>
+    </nav>
+    <nav class="nav2">
+        <a href="">Boton 1</a>
+        <a href="">Boton 2</a>
+        <a href="">Boton 3</a>
+        <a href="">Boton 4</a>
+        <a href="">Boton 5</a>
+    </nav>
+    <main>
+        <h2>¿Cómo se adapta esta web?</h2>
+        <p>
+            Crear una maqueta de una web que modifique su composición 
+            dependiendo del dispositivo con el que se visualice. 
+            Utilizar para ello un diseño responsive con media queries, 
+            no se puede utilizar Flexbox o CSS Grid.  La maqueta se 
+            guardará en dos archivos llamados maqueta.html y maqueta.css.
+        </p>
+        <h3>Pantalla de ordenador (a partir de 1200px)</h3>
+        <p>
+            El tipo de letra para el tamaño de pantalla de ordenador será Arial.
+        </p>
+        <h3>Pantalla de tablet (a partir de 700px y hasta 1200px)</h3>
+        <p>
+            El tipo de letra para el tamaño de pantalla de tablet será Calibri.
+        </p>
+        <h3>Pantalla de móvil (hasta 700px)</h3>
+        <p>
+            El tipo de letra para el tamaño de pantalla de móvil será Times New Roman.
+        </p>
+    </main>
+    <aside>
+        BANNER
+    </aside>
     <footer>
-
+        Maqueta Web - Isabel Granados Palma -DIW
     </footer>
 </body>
 </html>
