--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Supermercado DIW - El supermercado orgánico de calidad a tu alcance</title>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="seccion-contenedor-articulos">
                         <article class="section-article">
-                            <img class="section-article-img" src="assets/images/carne.jpg" alt="carne">
+                            <a href="assets/images/carne.jpg" class="img-transicion"><img class="section-article-img" src="assets/images/carne.jpg" alt="carne"></a>
                             <div class="section-article-header">
                                 <h4 class="section-article-title">Pack Napolitanas</h4>
                                 <h4 class="section-article-brand">NOMBRE DE MARCA</h4>
@@ -114,7 +114,7 @@
                             </div>
                         </article>
                         <article class="section-article">
-                            <img class="section-article-img" src="assets/images/queso.jpg" alt="queso">
+                            <a href="assets/images/queso.jpg" class="img-transicion"><img class="section-article-img" src="assets/images/queso.jpg" alt="queso"></a>
                             <div class="section-article-header">
                                 <h4 class="section-article-title">Pack Napolitanas</h4>
                                 <h4 class="section-article-brand">NOMBRE DE MARCA</h4>
@@ -124,7 +124,7 @@
                             </div>
                         </article>
                         <article class="section-article">
-                            <img class="section-article-img" src="assets/images/burguer.jpeg" alt="burguer">
+                            <a href="assets/images/burguer.jpeg" class="img-transicion"><img class="section-article-img" src="assets/images/burguer.jpeg" alt="burguer"></a>
                             <div class="section-article-header">
                                 <h4 class="section-article-title">Pack Napolitanas</h4>
                                 <h4 class="section-article-brand">NOMBRE DE MARCA</h4>
@@ -134,7 +134,7 @@
                             </div>
                         </article>
                         <article class="section-article">
-                            <img class="section-article-img" src="assets/images/helado.jpeg" alt="helado">
+                            <a href="assets/images/helado.jpeg" class="img-transicion"><img class="section-article-img" src="assets/images/helado.jpeg" alt="helado"></a>
                             <div class="section-article-header">
                                 <h4 class="section-article-title">Pack Napolitanas</h4>
                                 <h4 class="section-article-brand">NOMBRE DE MARCA</h4>
@@ -150,7 +150,7 @@
                     </div>
                     <div class="seccion-contenedor-articulos">
                         <article class="section-article">
-                            <img class="section-article-img" src="assets/images/carne.jpg" alt="carne">
+                            <a href="assets/images/carne.jpg" class="img-transicion"><img class="section-article-img" src="assets/images/carne.jpg" alt="carne"></a>
                             <div class="section-article-header">
                                 <h4 class="section-article-title">Pack Napolitanas</h4>
                                 <h4 class="section-article-brand">NOMBRE DE MARCA</h4>
@@ -160,7 +160,7 @@
                             </div>
                         </article>
                         <article class="section-article">
-                            <img class="section-article-img" src="assets/images/queso.jpg" alt="queso">
+                            <a href="assets/images/queso.jpg" class="img-transicion"><img class="section-article-img" src="assets/images/queso.jpg" alt="queso"></a>
                             <div class="section-article-header">
                                 <h4 class="section-article-title">Pack Napolitanas</h4>
                                 <h4 class="section-article-brand">NOMBRE DE MARCA</h4>
@@ -170,7 +170,7 @@
                             </div>
                         </article>
                         <article class="section-article">
-                            <img class="section-article-img" src="assets/images/burguer.jpeg" alt="burguer">
+                            <a href="assets/images/burguer.jpeg" class="img-transicion"><img class="section-article-img" src="assets/images/burguer.jpeg" alt="burguer"></a>
                             <div class="section-article-header">
                                 <h4 class="section-article-title">Pack Napolitanas</h4>
                                 <h4 class="section-article-brand">NOMBRE DE MARCA</h4>
@@ -180,7 +180,7 @@
                             </div>
                         </article>
                         <article class="section-article">
-                            <img class="section-article-img" src="assets/images/helado.jpeg" alt="helado">
+                            <a href="assets/images/helado.jpeg" class="img-transicion"><img class="section-article-img" src="assets/images/helado.jpeg"></a>
                             <div class="section-article-header">
                                 <h4 class="section-article-title">Pack Napolitanas</h4>
                                 <h4 class="section-article-brand">NOMBRE DE MARCA</h4>
@@ -268,7 +268,7 @@
                             </div>
                         </article>
                         <article class="section-article">
-                            <img class="section-article-img" src="assets/images/zumos.jpg" alt="zumos">
+                            <img class="section-article-img" src="assets/images/zumos.jpg">
                             <div class="section-article-header">
                                 <h4 class="section-article-title">Zumos naturales</h4>
                                 <h4 class="section-article-brand">NOMBRE DE MARCA</h4>
@@ -430,6 +430,7 @@
                                 Nuestros mejores helados caseros de leche fresca y fruta de temporada...
                             </div>
                         </article>
+                    </div>
                 </section>
                 <!--Sección 4. Ofertas-->
                 <section id="section-ofertas">
